@@ -61,6 +61,7 @@ aarch64-tests: \
 	test0034-aarch64-binary \
 	test0035-aarch64-binary \
 	test0036-aarch64-binary \
+	test0037-aarch64-binary \
 	test0100-aarch64-binary \
 	test0101-aarch64-binary \
 	test0102-aarch64-binary \
@@ -108,6 +109,7 @@ amd64-tests: \
 	test0034-amd64-binary \
 	test0035-amd64-binary \
 	test0036-amd64-binary \
+	test0037-amd64-binary \
 	test0100-amd64-binary \
 	test0101-amd64-binary \
 	test0102-amd64-binary \
@@ -152,6 +154,7 @@ knight-posix-tests: \
 	test0034-knight-posix-binary \
 	test0035-knight-posix-binary \
 	test0036-knight-posix-binary \
+	test0037-knight-posix-binary \
 	test0100-knight-posix-binary \
 	test0101-knight-posix-binary \
 	test0102-knight-posix-binary \
@@ -220,6 +223,7 @@ armv7l-tests: \
 	test0034-armv7l-binary \
 	test0035-armv7l-binary \
 	test0036-armv7l-binary \
+	test0037-armv7l-binary \
 	test0100-armv7l-binary \
 	test0101-armv7l-binary \
 	test0102-armv7l-binary \
@@ -267,6 +271,7 @@ x86-tests: \
 	test0034-x86-binary \
 	test0035-x86-binary \
 	test0036-x86-binary \
+	test0037-x86-binary \
 	test0100-x86-binary \
 	test0101-x86-binary \
 	test0102-x86-binary \
@@ -314,6 +319,7 @@ riscv32-tests: \
 	test0034-riscv32-binary \
 	test0035-riscv32-binary \
 	test0036-riscv32-binary \
+	test0037-riscv32-binary \
 	test0100-riscv32-binary \
 	test0101-riscv32-binary \
 	test0102-riscv32-binary \
@@ -361,6 +367,7 @@ riscv64-tests: \
 	test0034-riscv64-binary \
 	test0035-riscv64-binary \
 	test0036-riscv64-binary \
+	test0037-riscv64-binary \
 	test0100-riscv64-binary \
 	test0101-riscv64-binary \
 	test0102-riscv64-binary \
@@ -480,6 +487,9 @@ test0035-riscv32-binary: M2-Planet | results
 
 test0036-riscv32-binary: M2-Planet | results
 	test/test0036/run_test.sh riscv32
+
+test0037-riscv32-binary: M2-Planet | results
+	test/test0037/run_test.sh riscv32
 
 test0100-riscv32-binary: M2-Planet | results
 	test/test0100/run_test.sh riscv32
@@ -616,6 +626,9 @@ test0035-riscv64-binary: M2-Planet | results
 test0036-riscv64-binary: M2-Planet | results
 	test/test0036/run_test.sh riscv64
 
+test0037-riscv64-binary: M2-Planet | results
+	test/test0037/run_test.sh riscv64
+
 test0100-riscv64-binary: M2-Planet | results
 	test/test0100/run_test.sh riscv64
 
@@ -750,6 +763,9 @@ test0035-aarch64-binary: M2-Planet | results
 
 test0036-aarch64-binary: M2-Planet | results
 	test/test0036/run_test.sh aarch64
+
+test0037-aarch64-binary: M2-Planet | results
+	test/test0037/run_test.sh aarch64
 
 test0100-aarch64-binary: M2-Planet | results
 	test/test0100/run_test.sh aarch64
@@ -886,6 +902,9 @@ test0035-amd64-binary: M2-Planet | results
 test0036-amd64-binary: M2-Planet | results
 	test/test0036/run_test.sh amd64
 
+test0037-amd64-binary: M2-Planet | results
+	test/test0037/run_test.sh amd64
+
 test0100-amd64-binary: M2-Planet | results
 	test/test0100/run_test.sh amd64
 
@@ -1011,6 +1030,9 @@ test0035-knight-posix-binary: M2-Planet | results
 
 test0036-knight-posix-binary: M2-Planet | results
 	test/test0036/hello-knight-posix.sh
+
+test0037-knight-posix-binary: M2-Planet | results
+	test/test0037/hello-knight-posix.sh
 
 test0100-knight-posix-binary: M2-Planet | results
 	test/test0100/hello-knight-posix.sh
@@ -1204,6 +1226,9 @@ test0035-armv7l-binary: M2-Planet | results
 test0036-armv7l-binary: M2-Planet | results
 	test/test0036/run_test.sh armv7l
 
+test0037-armv7l-binary: M2-Planet | results
+	test/test0037/run_test.sh armv7l
+
 test0100-armv7l-binary: M2-Planet | results
 	test/test0100/run_test.sh armv7l
 
@@ -1338,6 +1363,9 @@ test0035-x86-binary: M2-Planet | results
 
 test0036-x86-binary: M2-Planet | results
 	test/test0036/run_test.sh x86
+
+test0037-x86-binary: M2-Planet | results
+	test/test0037/run_test.sh x86
 
 test0100-x86-binary: M2-Planet | results
 	test/test0100/run_test.sh x86
