@@ -274,6 +274,13 @@ ca0f98422c0e77e457a27914c72f1b41c032dacc2b0e6edee38c9a54a64da989  test/results/t
 3d3a5ab3dec4f1f6aa4ab900ace1a99057d87415fe825728d1206937716e79fa  test/results/test0036-riscv32-binary
 13cfad9a6e187cdae141b709e96578c88c8a7cab10fe1ed4d3246290c5f0a842  test/results/test0036-riscv64-binary
 dd879603c6f9ea59e58db1131c44041ff0ecb885b3e17f50c10249090dd66a13  test/results/test0036-x86-binary
+673bd0f29943e6556f7e652cfb917503015f95a1c134d4a71e130b16b1c2baa4  test/results/test0037-aarch64-binary
+98efd7947e5104055310f5fde4223017202a250f031c6612dcdbd3c455dc0a91  test/results/test0037-amd64-binary
+8f5dd072607aeadb925e0c9b4b5e577ba4514c5f74f4454e9c9fc535fbfed266  test/results/test0037-armv7l-binary
+03be9f46aa274524aa0b2dabfcfa2b290fc46949c080044f0345c13737e3235b  test/results/test0037-knight-posix-binary
+e3535bd5ea380aca02a17191d36c59e4d9f5ccc731803ede94a0475a596a0d1c  test/results/test0037-riscv32-binary
+b3e51dc32fda6443b41db6ac89832ef09a99e35fb51ad0ec52edc39d88d42161  test/results/test0037-riscv64-binary
+d97f81759aa9f5fc07160a2e74cdff10723dc7710216ad31ed5ab6f39fb1e4c2  test/results/test0037-x86-binary
 9fbdb6d8893d810edcd82f573dd8237bd9821c907393f286a3c21b1f8f721bb8  test/results/test0100-aarch64-binary
 ec4da43c473924f70827c904a4c6d5f45701ab9e76b444ba152af893e16ee440  test/results/test0100-amd64-binary
 8f92b728d28972166e4aa7a3acc400e6dd629ec769cc176f1eedacd26855d130  test/results/test0100-armv7l-binary
@@ -322,10 +329,10 @@ abf349aaf23111dcf813ca4c11d725e154d2367bf5ab91b62e022fd34da72f7d  test/results/t
 af4dd167d0ea436831ad24b3c337a4255b09e4628ff00979e7787735de927186  test/results/test0106-riscv32-binary
 818e8e8de251909fac6002b7b6d66a70f5e8ed7eeec5ddf5b8b3588cbc436a53  test/results/test0106-riscv64-binary
 934581c994dd81c4bbd7b501084f9734c8cd0b9a78fffb08adba75b17083503a  test/results/test0106-x86-binary
-72251b0bb2fd87d620e1497ca4fa89c1ffa9eedb0e5420873ae00a3bda8b1245  test/results/test1000-aarch64-binary
-0ea42503066f68cd50c8dbcb8d3fb60b7aee8b6e75dd22aef07ba5b5873befe3  test/results/test1000-amd64-binary
-545d652a274e0a93ab2171117652648e0600ffad0f5162e0cd88feeea5a83580  test/results/test1000-armv7l-binary
-d152d5a854cd3843a42dbae0faf1d3a9cb2513fed28a0cf7aa1be02311014caf  test/results/test1000-knight-posix-binary
-4b45d67ca5887cb0c88e881e1be03027490e4c55250480c3560963e65ac3efab  test/results/test1000-riscv32-binary
-d3ae6ca7c4f8d592344ede4f786dd3dcbadd261942a8fb7d95db4be84566f18e  test/results/test1000-riscv64-binary
-4132b17482de3e2ae59f39504b5b6d5edb294f5c1b69514ef0b9d9e947032b1a  test/results/test1000-x86-binary
+3d2ea86e81529f0c5bdb90549e62d5d5a86be39578da5baf6272ece3bbf5093e  test/results/test1000-aarch64-binary
+656c7925fabadc81ea5fd8280c39aecdf60297558abd42cecbfa202f45890a23  test/results/test1000-amd64-binary
+4285212babdaaaffba07235c37c2098383d8f3a8ffaa387529acb91f2c2217fb  test/results/test1000-armv7l-binary
+c3bcb7fe7f3765a99a8f5132258cd0af821e550666c5213c568f8b983361a8fd  test/results/test1000-knight-posix-binary
+2fc9d52b4bde983af4bd539478dc450513be1220c31dbdb520bc452ffd445ddb  test/results/test1000-riscv32-binary
+871d65b32900e4e956197307d25c7d0091fbc674ee8b769c0ad14928cf54d1e1  test/results/test1000-riscv64-binary
+99f2fd47950374c603c32b514840c81d9fd579f8482e74f76fecfc2b86bd75d9  test/results/test1000-x86-binary
